# hpp-manipulation-corba

csharp/: CMakeLists.txt
csharp/src/: client.cs
idl/hpp/corbaserver/manipulation/: graph.idl
src/: CMakeLists.txt  graph.impl.cc  graph.impl.hh  problem.impl.cc  robot.impl.cc  tools.cc  tools.hh
src/hpp/corbaserver/manipulation/: constraint_graph.py  constraint_graph_factory.py  problem_solver.py  robot.py
